增加.rodata section的分析

--- a/虚函数笔记.md
+++ b/虚函数笔记.md
@@ -19,7 +19,45 @@
 
 # 代码示例
 
-* 代码
+## 虚函数表
+
+* 首先，使用gdb调试查看内存数据
+
+```
+(gdb) p *b1
+$1 = {_vptr.Base3 = 0x401150 <vtable for Base3+16>, x = 0, y = 0}
+(gdb) p *b2
+$2 = {_vptr.Base3 = 0x4010d0 <vtable for Derive3+16>, x = 0, y = 0}
+(gdb) p *b3
+$3 = {<Base3> = {_vptr.Base3 = 0x4010b0 <vtable for Derive4+16>, x = 0, y = 0}, <No data fields>}
+(gdb) p *b4
+$4 = {_vptr.Base3 = 0x4010b0 <vtable for Derive4+16>, x = 0, y = 0}
+(gdb) p (long*)*((long*)0x4010b0)
+$7 = (long *) 0x400e1e <Base3::incr()>
+(gdb) p (long*)*((long*)0x4010b0 + 1)
+$8 = (long *) 0x400e3a <Base3::get()>
+```
+
+* 然后，使用objdump查看elf文件，找到0x4010b0地址的数据
+
+```
+Contents of section .rodata
+ ...
+ 4010a0 00000000 00000000 90114000 00000000  ..........@.....
+ 4010b0 1e0e4000 00000000 3a0e4000 00000000  ..@.....:.@..... //vtable for Derive4+16
+ 4010c0 00000000 00000000 c0114000 00000000  ..........@.....
+ 4010d0 1e0e4000 00000000 540e4000 00000000  ..@.....T.@..... //vtable for Derive3+16
+ 4010e0 00000000 00000000 00124000 00000000  ..........@.....
+ ...
+ 401140 00000000 00000000 70124000 00000000  ........p.@.....
+ 401150 1e0e4000 00000000 3a0e4000 00000000  ..@.....:.@..... //vtable for Base3+16***
+ 401160 00000000 00000000 b0124000 00000000  ..........@.....
+ ...
+```
+
+所以，虚函数表是在编译阶段生成的，存放在.rodata section。
+
+## 代码
 
 ```
 #include <iostream>
@@ -122,15 +160,15 @@ int main(void)
 }
 ```
 
-* 使用gdb工具调试，打断点，然后，使用x命令、p命令等查看内存数据
+## 使用gdb工具调试，打断点，然后，使用x命令、p命令等查看内存数据
 
-* 查看内存布局
+## 查看内存布局
 
 ```
 cat /proc/{pid}/maps
 ```
 
-* 通过objdump查看elf文件布局
+## 通过objdump查看elf文件布局
 
 ```
 [work@VM_0_8_centos cplusplus]$ objdump --disassemble-all --start-address=0x400000 --stop-address=0x402000 ./test_v
